cmake_minimum_required(VERSION 2.8)
project(cavium)
cmake_policy(VERSION 2.8.7)
enable_testing()
INCLUDE(scripts/testing.cmake)
INCLUDE(scripts/parse_arguments.cmake)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  set(CMAKE_INSTALL_PREFIX "/opt/hts/" CACHE PATH "Default installation in /opt/hts/" FORCE)
endif()
file(COPY infra DESTINATION "${CMAKE_INSTALL_PREFIX}")

set(TEST_INFRA_LOC ${PROJECT_SOURCE_DIR}/tests)
add_subdirectory(scripts)
add_subdirectory(tests)
add_subdirectory(infra)
